--- a/css/index.css
+++ b/css/index.css
@@ -78,7 +78,7 @@ a {
     width: 60%;
     font-size: 80px;
     font-family: 'Roboto', sans-serif;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-left: 10%;
     text-transform: lowercase;
     position: relative;
@@ -95,14 +95,14 @@ a {
 
 .previu-2{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 
 .photomy {
     display: flex;
     height: 800px;
-    margin-top: 0px;
+    margin-top: 60px;
     margin-left: 0px;
     margin-bottom: 0px; 
     margin-right: 0;
